# minf-v3

./: pyproject.toml  workbook.ipynb
processed/New folder/: feel good_l.tiff  feel good_r.tiff  feel good_signs_l.tiff  feel good_signs_r.tiff
spectralcodec/: Spectrum.py  codec.py
